add notes section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ website:
         text: cv
       - href: posts.qmd
         text: posts
+      - href: notes.qmd
+        text: notes
 
 
 format:
